--- a/ObjectRecognition/ObjectRecognition/App.xaml
+++ b/ObjectRecognition/ObjectRecognition/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="ObjectRecognition.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ObjectRecognition.Foundation.MainWindow"
+             xmlns:local="clr-namespace:ObjectRecognition.Project.MainWindow"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Style TargetType="Image">
