--- a/ObjectRecognition/ObjectRecognition/MainWindow.xaml
+++ b/ObjectRecognition/ObjectRecognition/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ObjectRecognition.Foundation.MainWindow.MainWindow"
+﻿<Window x:Class="ObjectRecognition.Project.MainWindow.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -31,6 +31,7 @@
             <StackPanel x:Name="SideMenuStackPanel" HorizontalAlignment="Left" Height="589" Grid.Row="1" VerticalAlignment="Top" Width="290"/>
 
         </Grid>
+        <Grid x:Name="pageHost" Grid.Column="2"/>
     </Grid>
 
 </Window>
