--- a/ObjectRecognition/ObjectRecognition.Feature.DetailsWindow/DetailsWindow.xaml
+++ b/ObjectRecognition/ObjectRecognition.Feature.DetailsWindow/DetailsWindow.xaml
@@ -21,17 +21,17 @@
             </Grid.ColumnDefinitions>
             <Grid x:Name="redChartGrid">
                 <Border x:Name="redBorder"  Margin="10,0,0,0" Background="White" CornerRadius="5" BorderBrush="#FFEAECF0" BorderThickness="1" >
-                    <wpf:CartesianChart x:Name="redChart"  UpdaterState="Paused" AnimationsSpeed="0:0:0.8" DisableAnimations="True"/>
+                    <wpf:CartesianChart x:Name="redChart"  UpdaterState="Paused" AnimationsSpeed="0:0:0.8" DisableAnimations="True" FontFamily="Ubuntu Light" Hoverable="False"/>
                 </Border>
             </Grid>
             <Grid x:Name="greenChartGrid" Grid.Column="1">
                 <Border x:Name="greenBorder"  Margin="10,0" Background="White" BorderBrush="#FFEAECF0" BorderThickness="1" CornerRadius="5" >
-                    <wpf:CartesianChart x:Name="greenChart" UpdaterState="Paused" AnimationsSpeed="0:0:0.8" DisableAnimations="True" />
+                    <wpf:CartesianChart x:Name="greenChart" UpdaterState="Paused" AnimationsSpeed="0:0:0.8" DisableAnimations="True" FontFamily="Ubuntu Light" Hoverable="False" />
                 </Border>
             </Grid>
             <Grid x:Name="blueChartGrid" Grid.Column="2">
                 <Border x:Name="blueBorder" Margin="0,0,10,0" Background="White" BorderBrush="#FFEAECF0" BorderThickness="1" CornerRadius="5" >
-                    <wpf:CartesianChart x:Name="blueChart"  UpdaterState="Paused" AnimationsSpeed="0:0:0.8" DisableAnimations="True"/>
+                    <wpf:CartesianChart x:Name="blueChart"  UpdaterState="Paused" AnimationsSpeed="0:0:0.8" DisableAnimations="True" FontFamily="Ubuntu Light" Hoverable="False"/>
                 </Border>
             </Grid>
         </Grid>
@@ -41,11 +41,11 @@
                     <ColumnDefinition Width="167*"/>
                     <ColumnDefinition Width="333*"/>
                 </Grid.ColumnDefinitions>
-                <wpf:PieChart x:Name="pieChart" DisableAnimations="True" DataTooltip="{x:Null}" Margin="10">
+                <wpf:PieChart x:Name="pieChart" DisableAnimations="True" DataTooltip="{x:Null}" Margin="10" FontFamily="Ubuntu Light">
 
                 </wpf:PieChart>
                 <Rectangle Grid.Column="1" HorizontalAlignment="Left" Width="1" Stroke="#FFEAECF0"/>
-                <Image x:Name="image" Grid.Column="1" HorizontalAlignment="Left" Height="220" Margin="10,10,0,0" VerticalAlignment="Top" Width="220"/>
+                <Image x:Name="image" Grid.Column="1" HorizontalAlignment="Left" Height="220" Margin="10,10,0,0" VerticalAlignment="Top" Width="220" MouseLeftButtonUp="image_MouseLeftButtonUp"/>
                 <Label x:Name="Title" Content="Label" Grid.Column="1" HorizontalAlignment="Left" Margin="235,10,0,0" VerticalAlignment="Top" Foreground="#FF4C5C76" FontFamily="Ubuntu" FontSize="18"/>
                 <Rectangle Grid.Column="1" HorizontalAlignment="Left" Width="1" Stroke="#FFEAECF0"/>
                 <TextBlock x:Name="pathText" Grid.Column="1" Margin="240,33,10,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="46" Foreground="#FF90A4C5"/>
