--- a/ObjectRecognition/ObjectRecognition.Foundation.UI/ImageDisplay.xaml
+++ b/ObjectRecognition/ObjectRecognition.Foundation.UI/ImageDisplay.xaml
@@ -4,10 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ObjectRecognition.Foundation.UI"
-             mc:Ignorable="d" Height="177.334" Width="150">
+             mc:Ignorable="d" Height="177.334" Width="200" MouseLeftButtonUp="UserControl_MouseLeftButtonUp">
     <Grid>
-        <Rectangle Fill="#FFF4F4F5" Stroke="#FFEAECF0" RadiusX="5" RadiusY="5"/>
-        <Image x:Name="image" HorizontalAlignment="Left" Height="90" Margin="1,25,0,0" VerticalAlignment="Top" Width="148"/>
-        <Label x:Name="Title" Content="Title" HorizontalAlignment="Left" Margin="5,3,0,0" VerticalAlignment="Top" FontFamily="Ubuntu Light" FontSize="10" Foreground="#FF4C5C76"/>
+        
+        <Border x:Name="body"  Background="White" CornerRadius="5" BorderBrush="#FFEBF0EA" BorderThickness="1" Padding="5">
+            <Image x:Name="image" StretchDirection="DownOnly"/>
+        </Border>
+<Rectangle x:Name="deletedMarker" RadiusX="5" RadiusY="5" Opacity="0.4"/>
     </Grid>
 </UserControl>
