--- a/ObjectRecognition/ObjectRecognition.Feature.OrWindow/LbpComparisonWindow.xaml
+++ b/ObjectRecognition/ObjectRecognition.Feature.OrWindow/LbpComparisonWindow.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:ObjectRecognition.Feature.OrWindow"
              xmlns:wpf="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d" 
-              Width="1200" Height="560">
+              Width="1200" Height="560" KeyDown="UserControl_KeyDown">
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="9*"/>
@@ -32,7 +32,20 @@
             </Border>
         </Grid>
         <Border x:Name="bottomBorder" Background="White" CornerRadius="5" BorderBrush="#FFEAECF0" BorderThickness="1" Margin="10" Grid.Row="1" Padding="5">
-            <Grid x:Name="infoGrid"/>
+            <Grid x:Name="infoGrid">
+                <Border Margin="0,-130,0,0" Background="White" CornerRadius="75" BorderBrush="#FFEAECF0" BorderThickness="1" Padding="5" HorizontalAlignment="Center" Width="150" Height="150" VerticalAlignment="Top">
+                    <wpf:Gauge Name="similarityGauge" Margin="5"
+                   Uses360Mode="True"
+                   From="0" To="100" Value="0"
+                   HighFontSize="30" Foreground="#FF4C5C76"
+                   FromColor="Red" ToColor="LimeGreen" LabelFormatter="{Binding YFormatter}"
+                   InnerRadius="35" GaugeBackground="#FFF0F0F0" FontFamily="Ubuntu Light" FontSize="10"/>
+                </Border>
+              
+                <Grid x:Name="dataGrid" HorizontalAlignment="Left" Width="335">
+                    <ListBox x:Name="listBox" HorizontalAlignment="Left" Width="335" BorderBrush="#FFEAECF0" Foreground="#FF8B8B8B"/>
+                </Grid>
+            </Grid>
 
         </Border>
     </Grid>
